--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^8.57.1",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
