--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
