--- a/functions/package.json
+++ b/functions/package.json
@@ -1,24 +1,23 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy",
-    "deploy-functions": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "20"
   },
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^11.11.0",
     "firebase-functions": "^6.4.0",
-    "cors": "^2.8.5"
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
