--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
