--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "axios": "^1.11.0",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^6.4.0",
     "nodemailer": "^6.9.14"
