--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
