--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.5.0",
