--- a/functions/package.json
+++ b/functions/package.json
@@ -16,9 +16,10 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.11.0",
-    "firebase-admin": "^11.11.0",
+    "cors": "^2.8.5",
+    "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.6.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
