--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.6.0",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "twilio": "^5.10.5"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
