--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
