--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
