--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
+    "mysql2": "^3.15.3",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
