--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "matafome-98455"
-  }
+    "default": "matafome-98455",
+    "matafome": "matafome-98455"
+  },
+  "targets": {},
+  "etags": {}
 }
