--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,13 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.37.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
-    "firebase-admin": "^13.5.0",
-    "firebase-functions": "^6.6.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.3",
     "nodemailer": "^7.0.10",
+    "openai": "^6.16.0",
     "twilio": "^5.10.5"
   },
   "devDependencies": {
