--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.37.0",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
@@ -19,6 +21,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.15.3",
+    "openai": "^6.16.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
