--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.5.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.15.3",
     "openai": "^6.16.0",
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5"
