--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "react-to-print": "^3.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
